smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/shape-name-syntax.smithy
// Parse error at line 4, column 14 near `..`: Expected: '{', but found '.'
namespace com.foo

structure Not...Valid {}
